<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/introduction_imgLogo"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/icon_channel"
        android:src="@drawable/tvpocketlogo" />

    <TextView
        android:id="@+id/introduction_product_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/product_name"
        android:textColor="@color/Combo77GreenUnderline"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/introduction_copyright"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/copyright"
        android:textColor="@color/Black"
        android:textSize="15sp" />

</LinearLayout>