<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:gravity="top"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/topActionPrglayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/channel_logo"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/icon_channel" />

        <TextView
            android:id="@+id/txtChannel"
            android:layout_width="150dp"
            android:layout_height="80dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:gravity="left|center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtProgramTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/Combo77GreenBG"
        android:gravity="left"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="20sp" >
    </TextView>

    <TextView
        android:id="@+id/txtProgramTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/Combo77GreenUnderline"
        android:gravity="left"
        android:paddingLeft="2dp"
        android:paddingRight="2dp"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:textStyle="italic" >
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnWatchOnline"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/watch_online_icon"
            android:contentDescription="@string/watch_online"
            android:onClick="startPlay"
            android:text="@string/watch_online" />

        <ImageButton
            android:id="@+id/btnAddFavourite"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/add_favourite_icon"
            android:contentDescription="@string/add_favourite"
            android:text="@string/add_favourite" />

        <ImageButton
            android:id="@+id/btnAddReminder"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/add_reminder_icon"
            android:contentDescription="@string/add_reminder"
            android:text="@string/add_reminder" />
    </LinearLayout>

    <fragment
        android:id="@+id/adFragmentProgramAction"
        android:name="com.mobile.tvpocket.fragments.AdFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

</LinearLayout>