<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/search_radioType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/search_radioChannel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/search_channel" />

        <RadioButton
            android:id="@+id/search_radioProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_program" />
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/search_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_toLeftOf="@+id/search_button"
            android:inputType="text"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:contentDescription="@string/icon_channel"
            android:src="@drawable/ic_search_blue" >
        </ImageButton>
    </RelativeLayout>

    <ListView
        android:id="@+id/search_listview_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
    </ListView>

    <TextView
        android:id="@+id/search_textview_message"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/search_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom" >

        <fragment
            android:id="@+id/search_adFragment"
            android:name="com.mobile.tvpocket.fragments.AdFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

</LinearLayout>